src/parser/generated/qsrcParser.py
# Generated from D:/VSC/GirlLifeLocalization/src/parser/python_grammar/qsrcParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class qsrcParser ( Parser ):

    grammarFileName = "qsrcParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'&'", "<INVALID>", "<INVALID>", "'='", "'+='", "'-='", 
                     "'/='", "'*='", "'to'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'*'", "':'", 
                     "'+'", "'-'", "'/'", "'>'", "<INVALID>", "'<'", "<INVALID>", 
                     "'<>'", "'$'", "'!'", "'!!'", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'{'", "'('", "')'", "','", "'?'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\"\"'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'}'" ]

    symbolicNames = [ "<INVALID>", "PassageIdentifier", "PassageEndMarker", 
                      "SYSCALL", "SYSSETTING", "ADDOBJ", "COPYARR", "DELACT", 
                      "DYNAMIC", "GOSUB", "GOTO", "XGOTO", "INPUT", "JUMP", 
                      "KILLVAR", "MSG", "OPENGAME", "PLAY", "Print", "PrintNewline", 
                      "PrintNewlinepre", "SAVEGAME", "VIEW", "WAIT", "ACT", 
                      "IF", "ELSEIF", "ELSE", "END", "INVERT", "AND", "OR", 
                      "CommandConnect", "NumberLiteral", "SET", "EqualOperator", 
                      "IncrementOperator", "DecrementOperator", "DivideSelfOperator", 
                      "MultSelfOperator", "SetToOperator", "TemplateStringEndExpression", 
                      "DOUBLEQUOTE", "SINGLEQUOTE", "TemplateDoubleSingleQuote", 
                      "MOD", "WORD", "STAR", "DPOINT", "PLUS", "MINUS", 
                      "DIVIDE", "GREATER_THAN", "GREAT_EQUAL_THAN", "LOWER_THAN", 
                      "LOWER_EQUAL_THAN", "NEQ", "DOLLAR", "EXCLAMATIONMARK", 
                      "CommentStart", "AttachedComment", "Multilinecomment", 
                      "ARRAYBRACKOPEN", "ARRAYBRACKCLOSE", "BRACK_OPEN", 
                      "ParenthesisLeft", "ParenthesisRight", "Comma", "Questionmark", 
                      "NEWLINE", "WHITESPACE", "LINEBREAK", "AnythingElse", 
                      "EscapedSingleQuote", "TemplateStringStartExpression", 
                      "StringAtom", "EscapedDoubleQuote", "DQTemplateStringStartExpression", 
                      "DQStringAtom", "InEscapedStringAtom", "BRACK_CLOSE", 
                      "AnythingElseInMultiLine", "InComment" ]

    RULE_passage = 0
    RULE_block = 1
    RULE_statementLine = 2
    RULE_emptyLine = 3
    RULE_actBlock = 4
    RULE_actInline = 5
    RULE_actPicture = 6
    RULE_ifInline = 7
    RULE_ifBlock = 8
    RULE_elseIfBlock = 9
    RULE_elseBlock = 10
    RULE_command = 11
    RULE_commandLine = 12
    RULE_commandAppended = 13
    RULE_addobj = 14
    RULE_assignment = 15
    RULE_assignmentNumber = 16
    RULE_assignmentString = 17
    RULE_assignmentoperator = 18
    RULE_comment = 19
    RULE_commentAttached = 20
    RULE_copyarr = 21
    RULE_delact = 22
    RULE_dynamic = 23
    RULE_gosub = 24
    RULE_gt = 25
    RULE_xgt = 26
    RULE_jump = 27
    RULE_jumpmarker = 28
    RULE_killvar = 29
    RULE_msg = 30
    RULE_multilineBlock = 31
    RULE_innerMultilineBlock = 32
    RULE_opengame = 33
    RULE_play = 34
    RULE_print = 35
    RULE_printMain = 36
    RULE_printNewlineMain = 37
    RULE_printNewlinepreMain = 38
    RULE_printEmptyLineMain = 39
    RULE_printSide = 40
    RULE_printNewlineSide = 41
    RULE_printNewlinepreSide = 42
    RULE_printEmptyLineSide = 43
    RULE_savegame = 44
    RULE_syscall = 45
    RULE_syssetting = 46
    RULE_view = 47
    RULE_wait = 48
    RULE_identifier = 49
    RULE_identifierNumber = 50
    RULE_identifierString = 51
    RULE_arrayIndex = 52
    RULE_compareOperator = 53
    RULE_notEqual = 54
    RULE_value = 55
    RULE_numberLiteralWithOptionalSign = 56
    RULE_functionWithNumberReturn = 57
    RULE_invert = 58
    RULE_numberOperator = 59
    RULE_functionWithStringReturn = 60
    RULE_functionArguments = 61
    RULE_escapedString = 62
    RULE_stringAtom = 63
    RULE_stringTemplateVar = 64
    RULE_stringTemplateVarSuffix = 65
    RULE_doubleQuoteAtom = 66
    RULE_stringTemplateVarDQ = 67
    RULE_stringDQTemplateVarSuffix = 68

    ruleNames =  [ "passage", "block", "statementLine", "emptyLine", "actBlock", 
                   "actInline", "actPicture", "ifInline", "ifBlock", "elseIfBlock", 
                   "elseBlock", "command", "commandLine", "commandAppended", 
                   "addobj", "assignment", "assignmentNumber", "assignmentString", 
                   "assignmentoperator", "comment", "commentAttached", "copyarr", 
                   "delact", "dynamic", "gosub", "gt", "xgt", "jump", "jumpmarker", 
                   "killvar", "msg", "multilineBlock", "innerMultilineBlock", 
                   "opengame", "play", "print", "printMain", "printNewlineMain", 
                   "printNewlinepreMain", "printEmptyLineMain", "printSide", 
                   "printNewlineSide", "printNewlinepreSide", "printEmptyLineSide", 
                   "savegame", "syscall", "syssetting", "view", "wait", 
                   "identifier", "identifierNumber", "identifierString", 
                   "arrayIndex", "compareOperator", "notEqual", "value", 
                   "numberLiteralWithOptionalSign", "functionWithNumberReturn", 
                   "invert", "numberOperator", "functionWithStringReturn", 
                   "functionArguments", "escapedString", "stringAtom", "stringTemplateVar", 
                   "stringTemplateVarSuffix", "doubleQuoteAtom", "stringTemplateVarDQ", 
                   "stringDQTemplateVarSuffix" ]

    EOF = Token.EOF
    PassageIdentifier=1
    PassageEndMarker=2
    SYSCALL=3
    SYSSETTING=4
    ADDOBJ=5
    COPYARR=6
    DELACT=7
    DYNAMIC=8
    GOSUB=9
    GOTO=10
    XGOTO=11
    INPUT=12
    JUMP=13
    KILLVAR=14
    MSG=15
    OPENGAME=16
    PLAY=17
    Print=18
    PrintNewline=19
    PrintNewlinepre=20
    SAVEGAME=21
    VIEW=22
    WAIT=23
    ACT=24
    IF=25
    ELSEIF=26
    ELSE=27
    END=28
    INVERT=29
    AND=30
    OR=31
    CommandConnect=32
    NumberLiteral=33
    SET=34
    EqualOperator=35
    IncrementOperator=36
    DecrementOperator=37
    DivideSelfOperator=38
    MultSelfOperator=39
    SetToOperator=40
    TemplateStringEndExpression=41
    DOUBLEQUOTE=42
    SINGLEQUOTE=43
    TemplateDoubleSingleQuote=44
    MOD=45
    WORD=46
    STAR=47
    DPOINT=48
    PLUS=49
    MINUS=50
    DIVIDE=51
    GREATER_THAN=52
    GREAT_EQUAL_THAN=53
    LOWER_THAN=54
    LOWER_EQUAL_THAN=55
    NEQ=56
    DOLLAR=57
    EXCLAMATIONMARK=58
    CommentStart=59
    AttachedComment=60
    Multilinecomment=61
    ARRAYBRACKOPEN=62
    ARRAYBRACKCLOSE=63
    BRACK_OPEN=64
    ParenthesisLeft=65
    ParenthesisRight=66
    Comma=67
    Questionmark=68
    NEWLINE=69
    WHITESPACE=70
    LINEBREAK=71
    AnythingElse=72
    EscapedSingleQuote=73
    TemplateStringStartExpression=74
    StringAtom=75
    EscapedDoubleQuote=76
    DQTemplateStringStartExpression=77
    DQStringAtom=78
    InEscapedStringAtom=79
    BRACK_CLOSE=80
    AnythingElseInMultiLine=81
    InComment=82

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PassageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PassageIdentifier(self):
            return self.getToken(qsrcParser.PassageIdentifier, 0)

        def block(self):
            return self.getTypedRuleContext(qsrcParser.BlockContext,0)


        def PassageEndMarker(self):
            return self.getToken(qsrcParser.PassageEndMarker, 0)

        def EOF(self):
            return self.getToken(qsrcParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(qsrcParser.NEWLINE)
            else:
                return self.getToken(qsrcParser.NEWLINE, i)

        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qsrcParser.CommentContext)
            else:
                return self.getTypedRuleContext(qsrcParser.CommentContext,i)


        def getRuleIndex(self):
            return qsrcParser.RULE_passage

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPassage" ):
                return visitor.visitPassage(self)
            else:
                return visitor.visitChildren(self)




    def passage(self):

        localctx = qsrcParser.PassageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_passage)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(qsrcParser.PassageIdentifier)
            self.state = 139
            self.block()
            self.state = 140
            self.match(qsrcParser.PassageEndMarker)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 58)) & ~0x3f) == 0 and ((1 << (_la - 58)) & 2059) != 0):
                self.state = 143
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [69]:
                    self.state = 141
                    self.match(qsrcParser.NEWLINE)
                    pass
                elif token in [58, 59, 61]:
                    self.state = 142
                    self.comment()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(qsrcParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qsrcParser.StatementLineContext)
            else:
                return self.getTypedRuleContext(qsrcParser.StatementLineContext,i)


        def getRuleIndex(self):
            return qsrcParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = qsrcParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3316861569513553912) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 35) != 0):
                self.state = 150
                self.statementLine()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def actBlock(self):
            return self.getTypedRuleContext(qsrcParser.ActBlockContext,0)


        def commandLine(self):
            return self.getTypedRuleContext(qsrcParser.CommandLineContext,0)


        def ifBlock(self):
            return self.getTypedRuleContext(qsrcParser.IfBlockContext,0)


        def emptyLine(self):
            return self.getTypedRuleContext(qsrcParser.EmptyLineContext,0)


        def getRuleIndex(self):
            return qsrcParser.RULE_statementLine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementLine" ):
                return visitor.visitStatementLine(self)
            else:
                return visitor.visitChildren(self)




    def statementLine(self):

        localctx = qsrcParser.StatementLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statementLine)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.actBlock()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.commandLine()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 158
                self.ifBlock()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 159
                self.emptyLine()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmptyLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(qsrcParser.NEWLINE, 0)

        def getRuleIndex(self):
            return qsrcParser.RULE_emptyLine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyLine" ):
                return visitor.visitEmptyLine(self)
            else:
                return visitor.visitChildren(self)




    def emptyLine(self):

        localctx = qsrcParser.EmptyLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_emptyLine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(qsrcParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACT(self):
            return self.getToken(qsrcParser.ACT, 0)

        def value(self):
            return self.getTypedRuleContext(qsrcParser.ValueContext,0)


        def DPOINT(self):
            return self.getToken(qsrcParser.DPOINT, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(qsrcParser.NEWLINE)
            else:
                return self.getToken(qsrcParser.NEWLINE, i)

        def block(self):
            return self.getTypedRuleContext(qsrcParser.BlockContext,0)


        def END(self):
            return self.getToken(qsrcParser.END, 0)

        def commandAppended(self):
            return self.getTypedRuleContext(qsrcParser.CommandAppendedContext,0)


        def commentAttached(self):
            return self.getTypedRuleContext(qsrcParser.CommentAttachedContext,0)


        def getRuleIndex(self):
            return qsrcParser.RULE_actBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActBlock" ):
                return visitor.visitActBlock(self)
            else:
                return visitor.visitChildren(self)




    def actBlock(self):

        localctx = qsrcParser.ActBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_actBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(qsrcParser.ACT)
            self.state = 165
            self.value(0)
            self.state = 166
            self.match(qsrcParser.DPOINT)
            self.state = 167
            self.match(qsrcParser.NEWLINE)
            self.state = 168
            self.block()
            self.state = 169
            self.match(qsrcParser.END)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 170
                self.commandAppended()


            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==60:
                self.state = 173
                self.commentAttached()


            self.state = 176
            self.match(qsrcParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActInlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACT(self):
            return self.getToken(qsrcParser.ACT, 0)

        def value(self):
            return self.getTypedRuleContext(qsrcParser.ValueContext,0)


        def DPOINT(self):
            return self.getToken(qsrcParser.DPOINT, 0)

        def command(self):
            return self.getTypedRuleContext(qsrcParser.CommandContext,0)


        def actPicture(self):
            return self.getTypedRuleContext(qsrcParser.ActPictureContext,0)


        def getRuleIndex(self):
            return qsrcParser.RULE_actInline

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActInline" ):
                return visitor.visitActInline(self)
            else:
                return visitor.visitChildren(self)




    def actInline(self):

        localctx = qsrcParser.ActInlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_actInline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(qsrcParser.ACT)
            self.state = 179
            self.value(0)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==67:
                self.state = 180
                self.actPicture()


            self.state = 183
            self.match(qsrcParser.DPOINT)
            self.state = 184
            self.command()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActPictureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Comma(self):
            return self.getToken(qsrcParser.Comma, 0)

        def value(self):
            return self.getTypedRuleContext(qsrcParser.ValueContext,0)


        def getRuleIndex(self):
            return qsrcParser.RULE_actPicture

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActPicture" ):
                return visitor.visitActPicture(self)
            else:
                return visitor.visitChildren(self)




    def actPicture(self):

        localctx = qsrcParser.ActPictureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_actPicture)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(qsrcParser.Comma)
            self.state = 187
            self.value(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfInlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(qsrcParser.IF, 0)

        def value(self):
            return self.getTypedRuleContext(qsrcParser.ValueContext,0)


        def DPOINT(self):
            return self.getToken(qsrcParser.DPOINT, 0)

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qsrcParser.CommandContext)
            else:
                return self.getTypedRuleContext(qsrcParser.CommandContext,i)


        def ELSE(self):
            return self.getToken(qsrcParser.ELSE, 0)

        def getRuleIndex(self):
            return qsrcParser.RULE_ifInline

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfInline" ):
                return visitor.visitIfInline(self)
            else:
                return visitor.visitChildren(self)




    def ifInline(self):

        localctx = qsrcParser.IfInlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifInline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(qsrcParser.IF)
            self.state = 190
            self.value(0)
            self.state = 191
            self.match(qsrcParser.DPOINT)
            self.state = 192
            self.command()
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 193
                self.match(qsrcParser.ELSE)
                self.state = 194
                self.command()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(qsrcParser.IF, 0)

        def value(self):
            return self.getTypedRuleContext(qsrcParser.ValueContext,0)


        def DPOINT(self):
            return self.getToken(qsrcParser.DPOINT, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(qsrcParser.NEWLINE)
            else:
                return self.getToken(qsrcParser.NEWLINE, i)

        def block(self):
            return self.getTypedRuleContext(qsrcParser.BlockContext,0)


        def END(self):
            return self.getToken(qsrcParser.END, 0)

        def elseIfBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qsrcParser.ElseIfBlockContext)
            else:
                return self.getTypedRuleContext(qsrcParser.ElseIfBlockContext,i)


        def elseBlock(self):
            return self.getTypedRuleContext(qsrcParser.ElseBlockContext,0)


        def commandAppended(self):
            return self.getTypedRuleContext(qsrcParser.CommandAppendedContext,0)


        def commentAttached(self):
            return self.getTypedRuleContext(qsrcParser.CommentAttachedContext,0)


        def getRuleIndex(self):
            return qsrcParser.RULE_ifBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfBlock" ):
                return visitor.visitIfBlock(self)
            else:
                return visitor.visitChildren(self)




    def ifBlock(self):

        localctx = qsrcParser.IfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.match(qsrcParser.IF)
            self.state = 198
            self.value(0)
            self.state = 199
            self.match(qsrcParser.DPOINT)
            self.state = 200
            self.match(qsrcParser.NEWLINE)
            self.state = 201
            self.block()
            self.state = 205
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 202
                self.elseIfBlock()
                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 209
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 208
                self.elseBlock()


            self.state = 211
            self.match(qsrcParser.END)
            self.state = 213
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 212
                self.commandAppended()


            self.state = 216
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==60:
                self.state = 215
                self.commentAttached()


            self.state = 218
            self.match(qsrcParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseIfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF(self):
            return self.getToken(qsrcParser.ELSEIF, 0)

        def value(self):
            return self.getTypedRuleContext(qsrcParser.ValueContext,0)


        def DPOINT(self):
            return self.getToken(qsrcParser.DPOINT, 0)

        def NEWLINE(self):
            return self.getToken(qsrcParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(qsrcParser.BlockContext,0)


        def getRuleIndex(self):
            return qsrcParser.RULE_elseIfBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseIfBlock" ):
                return visitor.visitElseIfBlock(self)
            else:
                return visitor.visitChildren(self)




    def elseIfBlock(self):

        localctx = qsrcParser.ElseIfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_elseIfBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            self.match(qsrcParser.ELSEIF)
            self.state = 221
            self.value(0)
            self.state = 222
            self.match(qsrcParser.DPOINT)
            self.state = 223
            self.match(qsrcParser.NEWLINE)
            self.state = 224
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(qsrcParser.ELSE, 0)

        def NEWLINE(self):
            return self.getToken(qsrcParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(qsrcParser.BlockContext,0)

